--- a/idol_gallery/idol_detail/fumika_test.html
+++ b/idol_gallery/idol_detail/fumika_test.html
@@ -4244,7 +4244,7 @@ kg
             var comment_tab_start = null;
             var show_premium = true;
         </script>
-        <script type='text/javascript' src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/createjs.min.js'></script>
+        <script type='text/javascript' src='../../js/createjs.min.js'></script>
         <script src='../../js/cjs/sign_effect/89_sign_effect.js'></script>
         <script src='../../js/cjs/sign_effect/89_sign_effect.js'></script>
         <script src='../../js/cjs/sign_effect/2416501_sign_effect.js'></script>
@@ -4257,8 +4257,8 @@ kg
         <script src='../../js/cjs/sign_effect/89_sign_effect.js'></script>
         <script src='../../js/cjs/sign_effect/89_sign_effect.js'></script>
         <script src='../../js/cjs/sign_effect/89_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/2436301_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/2536302_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/2436301_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/2536302_sign_effect.js'></script>
         <script src='../../js/cjs/sign_effect/89_sign_effect.js'></script>
         <script src='../../js/cjs/sign_effect/89_sign_effect.js'></script>
         <script src='../../js/cjs/sign_effect/89_sign_effect.js'></script>
@@ -4273,23 +4273,23 @@ kg
         <script src='../../js/cjs/sign_effect/89_sign_effect.js'></script>
         <script src='../../js/cjs/sign_effect/89_sign_effect.js'></script>
         <script src='../../js/cjs/sign_effect/89_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/2462701_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/2562702_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/2462701_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/2562702_sign_effect.js'></script>
         <script src='../../js/cjs/sign_effect/89_sign_effect.js'></script>
         <script src='../../js/cjs/sign_effect/89_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/2467001_sign_effect.js'></script>
-        <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/underscore-min.js"></script>
-        <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/backbone-min.js"></script>
-        <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/ilibrary.js" type="text/javascript"></script>
-        <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/islider.js" type="text/javascript"></script>
-        <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/boombox.min.js" type="text/javascript"></script>
-        <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/min/gallery.min.js" type="text/javascript"></script>
-        <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/min/bb_loader.min.js" type="text/javascript"></script>
+        <script src='../../js/cjs/sign_effect/2467001_sign_effect.js'></script>
+        <script src="../../js/underscore-min.js"></script>
+        <script src="../../js/backbone-min.js"></script>
+        <script src="../../js/ilibrary.js" type="text/javascript"></script>
+        <script src="../../js/islider.js" type="text/javascript"></script>
+        <script src="../../js/boombox.min.js" type="text/javascript"></script>
+        <script src="../../js/min/gallery.min.js" type="text/javascript"></script>
+        <script src="../../js/min/bb_loader.min.js" type="text/javascript"></script>
         <div class="m-Top8 m-Btm8">
-            <img src="http://sp.pf-img-a.mbga.jp/12008305?url=http://125.6.169.35/idolmaster/image_sp/ui/line_hoshi.jpg" width="100%">
+            <img src="../../image_sp/ui/line_hoshi.jpg" width="100%">
         </div>
         <a id="search_cartoon" href='#' class="btn_normal_line_2 m-Cnt m-Btm12">劇場で検索</a>
-        <a href='http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_gallery%3Fl_frm%3DIdol_gallery_idol_detail_1%26rnd%3D295386408'>
+        <a href='http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_gallery'>
             <div class="backLink">アイドルギャラリーTOP</div>
         </a>
         <footer>
