--- a/idol_gallery/idol_detail/fumika_test.html
+++ b/idol_gallery/idol_detail/fumika_test.html
@@ -217,9 +217,9 @@
                     <div class="displayBox">
                         <div class="idol" style="background:url(../../image_sp/card/xs/fumika_36.jpg) no-repeat; background-size:54px 54px;width:54px;height:54px;position:relative;" data-index="35">
                         </div>
-                        <div class="idol" style="background:url(http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/xs/45b089ee2ddc60f26d271e1e0a86e0df.jpg) no-repeat; background-size:54px 54px;width:54px;height:54px;position:relative;" data-index="36">
+                        <div class="idol" style="background:url(../../image_sp/card/xs/fumika_37.jpg) no-repeat; background-size:54px 54px;width:54px;height:54px;position:relative;" data-index="36">
                         </div>
-                        <div class="idol" style="background:url(http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/xs/1bfbf5c344ce17e6e86444dbb72154d6.jpg) no-repeat; background-size:54px 54px;width:54px;height:54px;position:relative;" data-index="37">
+                        <div class="idol" style="background:url(../../image_sp/card/xs/fumika_38.jpg) no-repeat; background-size:54px 54px;width:54px;height:54px;position:relative;" data-index="37">
                         </div>
                     </div>
                 </li>
@@ -3870,74 +3870,76 @@ kg
                           "../../image_sp/card/l/fumika_37.jpg", 
                           "../../image_sp/card/l/fumika_38.jpg"],
                     "l_premium": {
-                        "4": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/ce511e82689c364d20fec5608adc6cf3.jpg",
-                        "5": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/5a726b8a757f4b8cf9119dfa675816b5.jpg",
-                        "6": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/96b6a60c3303906015d4032211e4b079.jpg",
-                        "7": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/ea4fe8c4505af919b7191de04b281b93.jpg",
-                        "8": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/1106c281db2655156a8e08432d9ab567.jpg",
-                        "9": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/d6cce24ee78944325364cd30bd20fdf5.jpg",
-                        "10": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/8e7cde57106b127e4b8fc0970cb6d65d.jpg",
-                        "11": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/5f4cadb282c332c2de83ff248ce9bb37.jpg",
-                        "12": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/a883d6a1227bd31f1677b3b616b2c285.jpg",
-                        "13": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/f9bd60aeeb955a43395e2383c6cde17f.jpg",
-                        "14": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/fd0a7dfded17e71db2b50a36b4fbfd59.jpg",
-                        "15": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/1070f27d097b076cfb92c9f35232b43e.jpg",
-                        "16": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/6e063bdc942ad4b54e2bbca4a78c8954.jpg",
-                        "17": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/9da100987158cfe8ebba9397d3a982a5.jpg",
-                        "18": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/611fb0f2780409db7dd4c429850216dd.jpg",
-                        "19": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/bd02113f22c12494c713a43bcc0c8e90.jpg",
-                        "20": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/bc0543756e6e7d6189a870046b7ae4a1.jpg",
-                        "21": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/4b7ca3e2cc6bfae71fa31a7e60ea8a3d.jpg",
-                        "22": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/3e4557ac9a31de976e01c0af62991395.jpg",
-                        "23": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/43a561d1471b0edb4143c7d7e392c45a.jpg",
-                        "24": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/16b3879c2979dd93fcb3961151e009de.jpg",
-                        "25": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/a5015bf028b92f11b86a2323e6df1e2c.jpg",
-                        "26": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/72aa896d01f6deaf6f33384129057c9d.jpg",
-                        "27": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/307bbad827fe9c2fd0a7615d41047a8a.jpg",
-                        "28": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/56793c4865905355a7c5303aa40fe4fc.jpg",
-                        "29": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/84621b61ee5236ca51eb63ccc3ed03fb.jpg",
-                        "30": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/54fd689747f5196b64ec8a863d944f62.jpg",
-                        "31": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/ab38373f0afc25bd76c325649e8206fb.jpg",
-                        "32": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/cb1479a63047d8251a1f07586bfde905.jpg",
-                        "33": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/c21eacac65cb6963fd7f6bda29a28075.jpg",
-                        "34": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/2b6a94e2836a3e5db9bd91336887fbdc.jpg",
-                        "35": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/152cf51ed5b6b692108bb9d9cefff723.jpg",
-                        "36": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/45b089ee2ddc60f26d271e1e0a86e0df.jpg"
+                        "4": "../../image_sp/card_sign_p/l/fumika_05.jpg",
+                        "5": "../../image_sp/card_sign_p/l/fumika_06.jpg",
+                        "6": "../../image_sp/card_sign_p/l/fumika_07.jpg",
+                        "7": "../../image_sp/card_sign_p/l/fumika_08.jpg",
+                        "8": "../../image_sp/card_sign_p/l/fumika_09.jpg",
+                        "9": "../../image_sp/card_sign_p/l/fumika_10.jpg",
+                        "10": "../../image_sp/card_sign_p/l/fumika_11.jpg",
+                        "11": "../../image_sp/card_sign_p/l/fumika_12.jpg",
+                        "12": "../../image_sp/card_sign_p/l/fumika_13.jpg",
+                        "13": "../../image_sp/card_sign_p/l/fumika_14.jpg",
+                        "14": "../../image_sp/card_sign_p/l/fumika_15.jpg",
+                        "15": "../../image_sp/card_sign_p/l/fumika_16.jpg",
+                        "16": "../../image_sp/card_sign_p/l/fumika_17.jpg",
+                        "17": "../../image_sp/card_sign_p/l/fumika_18.jpg",
+                        "18": "../../image_sp/card_sign_p/l/fumika_19.jpg",
+                        "19": "../../image_sp/card_sign_p/l/fumika_20.jpg",
+                        "20": "../../image_sp/card_sign_p/l/fumika_21.jpg",
+                        "21": "../../image_sp/card_sign_p/l/fumika_22.jpg",
+                        "22": "../../image_sp/card_sign_p/l/fumika_23.jpg",
+                        "23": "../../image_sp/card_sign_p/l/fumika_24.jpg",
+                        "24": "../../image_sp/card_sign_p/l/fumika_25.jpg",
+                        "25": "../../image_sp/card_sign_p/l/fumika_26.jpg",
+                        "26": "../../image_sp/card_sign_p/l/fumika_27.jpg",
+                        "27": "../../image_sp/card_sign_p/l/fumika_28.jpg",
+                        "28": "../../image_sp/card_sign_p/l/fumika_29.jpg",
+                        "29": "../../image_sp/card_sign_p/l/fumika_30.jpg",
+                        "30": "../../image_sp/card_sign_p/l/fumika_31.jpg",
+                        "31": "../../image_sp/card_sign_p/l/fumika_32.jpg",
+                        "32": "../../image_sp/card_sign_p/l/fumika_33.jpg",
+                        "33": "../../image_sp/card_sign_p/l/fumika_34.jpg",
+                        "34": "../../image_sp/card_sign_p/l/fumika_35.jpg",
+                        "35": "../../image_sp/card_sign_p/l/fumika_36.jpg",
+                        "36": "../../image_sp/card_sign_p/l/fumika_37.jpg",
+                        "37": "../../image_sp/card_sign_p/l/fumika_38.jpg"
                     },
-                    "l_nosign": ["", "", "", "", "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/ce511e82689c364d20fec5608adc6cf3.jpg", 
-                                 "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/5a726b8a757f4b8cf9119dfa675816b5.jpg", 
-                                 "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/96b6a60c3303906015d4032211e4b079.jpg", 
-                                 "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/ea4fe8c4505af919b7191de04b281b93.jpg", 
-                                 "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/1106c281db2655156a8e08432d9ab567.jpg", 
-                                 "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/d6cce24ee78944325364cd30bd20fdf5.jpg", 
-                                 "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/8e7cde57106b127e4b8fc0970cb6d65d.jpg", 
-                                 "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/5f4cadb282c332c2de83ff248ce9bb37.jpg", 
-                                 "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/a883d6a1227bd31f1677b3b616b2c285.jpg", 
-                                 "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/f9bd60aeeb955a43395e2383c6cde17f.jpg", 
-                                 "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/fd0a7dfded17e71db2b50a36b4fbfd59.jpg", 
-                                 "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/1070f27d097b076cfb92c9f35232b43e.jpg", 
-                                 "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/6e063bdc942ad4b54e2bbca4a78c8954.jpg", 
-                                 "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/9da100987158cfe8ebba9397d3a982a5.jpg", 
-                                 "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/611fb0f2780409db7dd4c429850216dd.jpg", 
-                                 "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/bd02113f22c12494c713a43bcc0c8e90.jpg", 
-                                 "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/bc0543756e6e7d6189a870046b7ae4a1.jpg", 
-                                 "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/4b7ca3e2cc6bfae71fa31a7e60ea8a3d.jpg", 
-                                 "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/3e4557ac9a31de976e01c0af62991395.jpg", 
-                                 "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/43a561d1471b0edb4143c7d7e392c45a.jpg", 
-                                 "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/16b3879c2979dd93fcb3961151e009de.jpg", 
-                                 "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/a5015bf028b92f11b86a2323e6df1e2c.jpg", 
-                                 "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/72aa896d01f6deaf6f33384129057c9d.jpg", 
-                                 "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/307bbad827fe9c2fd0a7615d41047a8a.jpg", 
-                                 "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/56793c4865905355a7c5303aa40fe4fc.jpg", 
-                                 "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/84621b61ee5236ca51eb63ccc3ed03fb.jpg", 
-                                 "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/54fd689747f5196b64ec8a863d944f62.jpg", 
-                                 "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/ab38373f0afc25bd76c325649e8206fb.jpg", 
-                                 "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/cb1479a63047d8251a1f07586bfde905.jpg", 
-                                 "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/c21eacac65cb6963fd7f6bda29a28075.jpg", 
-                                 "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/2b6a94e2836a3e5db9bd91336887fbdc.jpg", 
-                                 "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/152cf51ed5b6b692108bb9d9cefff723.jpg", 
-                                 "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/45b089ee2ddc60f26d271e1e0a86e0df.jpg", 
-                                 "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/1bfbf5c344ce17e6e86444dbb72154d6.jpg"],
+                    "l_nosign": ["", "", "", "", 
+                                 "../../image_sp/card/l/fumika_05.jpg", 
+                                 "../../image_sp/card/l/fumika_06.jpg", 
+                                 "../../image_sp/card/l/fumika_07.jpg", 
+                                 "../../image_sp/card/l/fumika_08.jpg", 
+                                 "../../image_sp/card/l/fumika_09.jpg", 
+                                 "../../image_sp/card/l/fumika_10.jpg", 
+                                 "../../image_sp/card/l/fumika_11.jpg", 
+                                 "../../image_sp/card/l/fumika_12.jpg", 
+                                 "../../image_sp/card/l/fumika_13.jpg", 
+                                 "../../image_sp/card/l/fumika_14.jpg", 
+                                 "../../image_sp/card/l/fumika_15.jpg", 
+                                 "../../image_sp/card/l/fumika_16.jpg", 
+                                 "../../image_sp/card/l/fumika_17.jpg", 
+                                 "../../image_sp/card/l/fumika_18.jpg", 
+                                 "../../image_sp/card/l/fumika_19.jpg", 
+                                 "../../image_sp/card/l/fumika_20.jpg", 
+                                 "../../image_sp/card/l/fumika_21.jpg", 
+                                 "../../image_sp/card/l/fumika_22.jpg", 
+                                 "../../image_sp/card/l/fumika_23.jpg", 
+                                 "../../image_sp/card/l/fumika_24.jpg", 
+                                 "../../image_sp/card/l/fumika_25.jpg", 
+                                 "../../image_sp/card/l/fumika_26.jpg", 
+                                 "../../image_sp/card/l/fumika_27.jpg", 
+                                 "../../image_sp/card/l/fumika_28.jpg", 
+                                 "../../image_sp/card/l/fumika_29.jpg", 
+                                 "../../image_sp/card/l/fumika_30.jpg", 
+                                 "../../image_sp/card/l/fumika_31.jpg", 
+                                 "../../image_sp/card/l/fumika_32.jpg", 
+                                 "../../image_sp/card/l/fumika_33.jpg", 
+                                 "../../image_sp/card/l/fumika_34.jpg", 
+                                 "../../image_sp/card/l/fumika_35.jpg", 
+                                 "../../image_sp/card/l/fumika_36.jpg", 
+                                 "../../image_sp/card/l/fumika_37.jpg", 
+                                 "../../image_sp/card/l/fumika_38.jpg"],
                     "l_nosign_p": {
                         "4": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/ce511e82689c364d20fec5608adc6cf3.jpg",
                         "5": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/5a726b8a757f4b8cf9119dfa675816b5.jpg",
