--- a/idol_gallery/idol_detail/fumika_test.html
+++ b/idol_gallery/idol_detail/fumika_test.html
@@ -4105,40 +4105,40 @@ kg
                               "../../image_sp/card/quest/fumika_02.png", 
                               "../../image_sp/card/quest/fumika_03.png", 
                               "../../image_sp/card/quest/fumika_04.png", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/ce511e82689c364d20fec5608adc6cf3.jpg", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/5a726b8a757f4b8cf9119dfa675816b5.jpg", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/96b6a60c3303906015d4032211e4b079.jpg", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/ea4fe8c4505af919b7191de04b281b93.jpg", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/1106c281db2655156a8e08432d9ab567.jpg", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/d6cce24ee78944325364cd30bd20fdf5.jpg", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/8e7cde57106b127e4b8fc0970cb6d65d.jpg", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/5f4cadb282c332c2de83ff248ce9bb37.jpg", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/a883d6a1227bd31f1677b3b616b2c285.jpg", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/f9bd60aeeb955a43395e2383c6cde17f.jpg", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/fd0a7dfded17e71db2b50a36b4fbfd59.jpg", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/1070f27d097b076cfb92c9f35232b43e.jpg", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/6e063bdc942ad4b54e2bbca4a78c8954.jpg", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/9da100987158cfe8ebba9397d3a982a5.jpg", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/611fb0f2780409db7dd4c429850216dd.jpg", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/bd02113f22c12494c713a43bcc0c8e90.jpg", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/bc0543756e6e7d6189a870046b7ae4a1.jpg", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/4b7ca3e2cc6bfae71fa31a7e60ea8a3d.jpg", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/3e4557ac9a31de976e01c0af62991395.jpg", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/43a561d1471b0edb4143c7d7e392c45a.jpg", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/16b3879c2979dd93fcb3961151e009de.jpg", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/a5015bf028b92f11b86a2323e6df1e2c.jpg", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/72aa896d01f6deaf6f33384129057c9d.jpg", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/307bbad827fe9c2fd0a7615d41047a8a.jpg", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/56793c4865905355a7c5303aa40fe4fc.jpg", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/84621b61ee5236ca51eb63ccc3ed03fb.jpg", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/54fd689747f5196b64ec8a863d944f62.jpg", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/ab38373f0afc25bd76c325649e8206fb.jpg", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/cb1479a63047d8251a1f07586bfde905.jpg", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/c21eacac65cb6963fd7f6bda29a28075.jpg", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/2b6a94e2836a3e5db9bd91336887fbdc.jpg", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/152cf51ed5b6b692108bb9d9cefff723.jpg", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/45b089ee2ddc60f26d271e1e0a86e0df.jpg", 
-                              "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/1bfbf5c344ce17e6e86444dbb72154d6.jpg"]
+                              "../../image_sp/card/quest/fumika_05.jpg", 
+                              "../../image_sp/card/quest/fumika_06.jpg", 
+                              "../../image_sp/card/quest/fumika_07.jpg", 
+                              "../../image_sp/card/quest/fumika_08.jpg", 
+                              "../../image_sp/card/quest/fumika_09.jpg", 
+                              "../../image_sp/card/quest/fumika_10.jpg", 
+                              "../../image_sp/card/quest/fumika_11.jpg", 
+                              "../../image_sp/card/quest/fumika_12.jpg", 
+                              "../../image_sp/card/quest/fumika_13.jpg", 
+                              "../../image_sp/card/quest/fumika_14.jpg", 
+                              "../../image_sp/card/quest/fumika_15.jpg", 
+                              "../../image_sp/card/quest/fumika_16.jpg", 
+                              "../../image_sp/card/quest/fumika_17.jpg", 
+                              "../../image_sp/card/quest/fumika_18.jpg", 
+                              "../../image_sp/card/quest/fumika_19.jpg", 
+                              "../../image_sp/card/quest/fumika_20.jpg", 
+                              "../../image_sp/card/quest/fumika_21.jpg", 
+                              "../../image_sp/card/quest/fumika_22.jpg", 
+                              "../../image_sp/card/quest/fumika_23.jpg", 
+                              "../../image_sp/card/quest/fumika_24.jpg", 
+                              "../../image_sp/card/quest/fumika_25.jpg", 
+                              "../../image_sp/card/quest/fumika_26.jpg", 
+                              "../../image_sp/card/quest/fumika_27.jpg", 
+                              "../../image_sp/card/quest/fumika_28.jpg", 
+                              "../../image_sp/card/quest/fumika_29.jpg", 
+                              "../../image_sp/card/quest/fumika_30.jpg", 
+                              "../../image_sp/card/quest/fumika_31.jpg", 
+                              "../../image_sp/card/quest/fumika_32.jpg", 
+                              "../../image_sp/card/quest/fumika_33.jpg", 
+                              "../../image_sp/card/quest/fumika_34.jpg", 
+                              "../../image_sp/card/quest/fumika_35.jpg", 
+                              "../../image_sp/card/quest/fumika_36.jpg", 
+                              "../../image_sp/card/quest/fumika_37.jpg", 
+                              "../../image_sp/card/quest/fumika_38.jpg"]
                 };
                 idol.ios_app_flg = false;
                 idol.apple_review = null;
