--- a/idol_gallery/idol_detail/fumika_test.html
+++ b/idol_gallery/idol_detail/fumika_test.html
@@ -3533,6 +3533,8 @@ kg
                         "is_trade_limit": false
                     },
                     "idol_search_param": "keyword=%E3%81%95%E3%81%8E%E3%81%95%E3%82%8F%E3%81%B5%E3%81%BF%E3%81%8B",
+                    "premium_sign_idol_base_id": "2567002",
+                    "js_premium_sign": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/2567002_sign_effect",
                     "archive": {
                         "normal": "1",
                         "premium": "1"
