--- a/idol_gallery/idol_detail/fumika_test.html
+++ b/idol_gallery/idol_detail/fumika_test.html
@@ -4286,6 +4286,7 @@ kg
         <script src='../../js/cjs/sign_effect/89_sign_effect.js'></script>
         <script src='../../js/cjs/sign_effect/89_sign_effect.js'></script>
         <script src='../../js/cjs/sign_effect/2467001_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/2567002_sign_effect.js'></script>
         <script src="../../js/underscore-min.js"></script>
         <script src="../../js/backbone-min.js"></script>
         <script src="../../js/ilibrary.js" type="text/javascript"></script>
