--- a/idol_gallery/idol_detail/fumika_test.html
+++ b/idol_gallery/idol_detail/fumika_test.html
@@ -3546,15 +3546,15 @@ kg
                     "story_id": "448",
                     "story_title": "シンデレラガール鷺沢文香",
                     "voice_enable": ["1", "1"],
-                    "flash_path": ["http://sp.pf.mbga.jp%/12008305%/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/448/1/idol_gallery--idol_detail--__hash_card_id__--2?l_frm=Idol_gallery_idol_detail_1&rnd=946737705", 
-                                   "http://sp.pf.mbga.jp%/12008305%/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/448/2/idol_gallery--idol_detail--__hash_card_id__--2?l_frm=Idol_gallery_idol_detail_1&rnd=22054584"],
-                    "voice_url": ["http://sp.pf.mbga.jp%/12008305%/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/448/1/idol_gallery/__hash_card_id__?l_frm=Idol_gallery_idol_detail_1&rnd=744567918", 
-                                  "http://sp.pf.mbga.jp%/12008305%/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/448/2/idol_gallery/__hash_card_id__?l_frm=Idol_gallery_idol_detail_1&rnd=450781483"],
+                    "flash_path": ["../../idol_story/movie_play/448/1.html", 
+                                   "../../idol_story/movie_play/448/2.html"],
+                    "voice_url": ["../../idol_story/sound_play/448/1.html", 
+                                  "../../idol_story/sound_play/448/2.html"],
                     "open_flag": ["1", "1"],
-                    "icon": ["http://sp.pf-img-a.mbga.jp%/12008305%/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/base/089.jpg", 
-                             "http://sp.pf-img-a.mbga.jp%/12008305%/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_movie_448_2.jpg"],
-                    "movie_name_voice": ["http://sp.pf-img-a.mbga.jp%/12008305%/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_moviename_cool_early.png", 
-                                         "http://sp.pf-img-a.mbga.jp%/12008305%/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_moviename_cool_late.png"]
+                    "icon": ["../../image_sp/ui/episode/base/089.jpg", 
+                             "../../image_sp/ui/episode/epi_button_movie_448_2.jpg"],
+                    "movie_name_voice": ["../../image_sp/ui/episode/epi_button_moviename_cool_early.png", 
+                                         "../../image_sp/ui/episode/epi_button_moviename_cool_late.png"]
                 }, {
                     "story_id": "436",
                     "story_title": "旅立ちの時♪まだ見ぬ明日へ",
