--- a/idol_gallery/idol_detail/fumika_test.html
+++ b/idol_gallery/idol_detail/fumika_test.html
@@ -4350,8 +4350,9 @@ kg
             <img src="../../image_sp/ui/line_hoshi.jpg" width="100%">
         </div>
         <a id="search_cartoon" href='#' class="btn_normal_line_2 m-Cnt m-Btm12">劇場で検索</a>
-        <a href='http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_gallery'>
-            <div class="backLink">アイドルギャラリーTOP</div>
+        <a href='../../item/show_premium_card_cjs/90/fumi_main.html' class="btn_normal_line_2 m-Cnt m-Btm12">후미카 키라펜 연출</a>
+        <a href='../../mypage.html'>
+            <div class="backLink">マイスタジオ</div>
         </a>
         <footer>
             <div class="line_idolmaster"></div><a href="#top" id="toPageTop" class="mypage_under">
