--- a/idol_gallery/idol_detail/fumika_test.html
+++ b/idol_gallery/idol_detail/fumika_test.html
@@ -4350,7 +4350,7 @@ kg
             <img src="../../image_sp/ui/line_hoshi.jpg" width="100%">
         </div>
         <a id="search_cartoon" href='#' class="btn_normal_line_2 m-Cnt m-Btm12">劇場で検索</a>
-        <a href='../../item/show_premium_card_cjs/90/fumi_main.html' class="btn_normal_line_2 m-Cnt m-Btm12">후미카 키라펜 연출</a>
+        <a href='../../item/show_premium_card_cjs/90/fumi_main.html' class="btn_normal_line_2 m-Cnt m-Btm12">プレミアムサイン</a>
         <a href='../../mypage.html'>
             <div class="backLink">マイスタジオ</div>
         </a>
