--- a/idol_story/movie_play/448/1.html
+++ b/idol_story/movie_play/448/1.html
@@ -107,13 +107,13 @@
         window.file_name = "story_generator_n1"; // createjs の本体ファイルを定義
         window.dir_name = "image_sp/cjs/genechara/";
         window.voice_manifest = {
-            'scene1': 'http://idolmaster.edgesuite.net/idolmaster/sound/9901051/9af59a64cea1804fbbb914dde5d15cdc.mp4',
-            'scene2': 'http://idolmaster.edgesuite.net/idolmaster/sound/9901051/9c90805f8de9ffb307ab316f69f81145.mp4',
-            'scene3': 'http://idolmaster.edgesuite.net/idolmaster/sound/9901051/1ebcef89826a247772d3fc110011b58c.mp4',
-            'scene4': 'http://idolmaster.edgesuite.net/idolmaster/sound/9901051/ca7c86aa722db6af453cbbfbc630cefb.mp4',
-            'scene5': 'http://idolmaster.edgesuite.net/idolmaster/sound/9901051/607185d1c1dd87a576ae6ed4b444854f.mp4',
-            'scene6': 'http://idolmaster.edgesuite.net/idolmaster/sound/9901051/401da943c62e366659e6e5617307795c.mp4',
-            'scene7': 'http://idolmaster.edgesuite.net/idolmaster/sound/9901051/efb234b2a84fb8556929ef1ae87de949.mp4',
+            'scene1': '../../../sound/9901051/scene1.mp3',
+            'scene2': '../../../sound/9901051/scene2.mp3',
+            'scene3': '../../../sound/9901051/scene3.mp3',
+            'scene4': '../../../sound/9901051/scene4.mp3',
+            'scene5': '../../../sound/9901051/scene5.mp3',
+            'scene6': '../../../sound/9901051/scene6.mp3',
+            'scene7': '../../../sound/9901051/scene7.mp3',
         };
         window._wrap_flag = 0;
         window._ua = window.navigator.userAgent;
@@ -2049,19 +2049,19 @@
         // 一旦すべてのキャラ画像をダミーに差し替え
         for (i = 1; i <= 20; i++) {
             for (n = 1; n <= 13; n++) {
-                window.chara_replace_images[('c' + i + '_face' + n)] = 'image_sp/cjs/chara/no_face.png';
+                window.chara_replace_images[('c' + i + '_face' + n)] = '../../../image_sp/cjs/chara/no_face.png';
             }
         }
         // 必要なキャラ画像を追加
-        window.chara_replace_images['c1_face1'] = 'image_sp/cjs/chara/other/10189.png';
-        window.chara_replace_images['c1_face1'] = 'image_sp/cjs/chara/other/10189.png';
-        window.chara_replace_images['c1_face2'] = 'image_sp/cjs/chara/other/10189_2.png';
-        window.chara_replace_images['c1_face9'] = 'image_sp/cjs/chara/other/10189_9.png';
-        window.chara_replace_images['c1_face6'] = 'image_sp/cjs/chara/other/10189_6.png';
-        window.chara_replace_images['c1_face2'] = 'image_sp/cjs/chara/other/10189_2.png';
-        window.chara_replace_images['c1_face5'] = 'image_sp/cjs/chara/other/10189_5.png';
-        window.chara_replace_images['c1_face5'] = 'image_sp/cjs/chara/other/10189_5.png';
-        window.chara_replace_images['c1_b'] = 'image_sp/cjs/chara/other/10189_b.png';
+        window.chara_replace_images['c1_face1'] = '../../../image_sp/cjs/chara/other/10189.png';
+        window.chara_replace_images['c1_face1'] = '../../../image_sp/cjs/chara/other/10189.png';
+        window.chara_replace_images['c1_face2'] = '../../../image_sp/cjs/chara/other/10189_2.png';
+        window.chara_replace_images['c1_face9'] = '../../../image_sp/cjs/chara/other/10189_9.png';
+        window.chara_replace_images['c1_face6'] = '../../../image_sp/cjs/chara/other/10189_6.png';
+        window.chara_replace_images['c1_face2'] = '../../../image_sp/cjs/chara/other/10189_2.png';
+        window.chara_replace_images['c1_face5'] = '../../../image_sp/cjs/chara/other/10189_5.png';
+        window.chara_replace_images['c1_face5'] = '../../../image_sp/cjs/chara/other/10189_5.png';
+        window.chara_replace_images['c1_b'] = '../../../image_sp/cjs/chara/other/10189_b.png';
         window.im_cjs.bg_frame_info = {
             '00001': 0,
         };
@@ -2093,7 +2093,7 @@
         };
         window.im_cjs.title_name = '事務所' || 'no_title';
         window.im_cjs.event_type = '3' || 0;
-        window.im_cjs.jump_url = 'http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/index%3Fkeyword%3D%26l_frm%3DIdol_story_generator_cjs_1%26rnd%3D533750110'; // createjsの演出が全て終了した場合の飛び先urlの定義
+        window.im_cjs.jump_url = '../../../idol_gallery/idol_detail/fumika.html'; // createjsの演出が全て終了した場合の飛び先urlの定義
         window.im_cjs.chara_num = 1;
         window.im_cjs.voice_flag = 1; // 音声再生フラグを定義
     </script>
@@ -2155,17 +2155,13 @@
                     var _prefix = lib.properties.manifest[i].id.replace(window.file_name + '_', '');
                     // 背景
                     if (window.bg_replace_images[_prefix]) {
-                        _img_path = 'image_sp/event_flash/story/bg/bg' + window.bg_replace_images[_prefix] + '_wide.jpg';
-                    }
-                    // op背景
-                    if (window.op_bg_replace_images[_prefix]) {
-                        _img_path = 'image_sp/event_flash/story/bg/bg' + window.op_bg_replace_images[_prefix] + '.jpg';
+                        _img_path = '../../../image_sp/event_flash/story/bg/bg' + window.bg_replace_images[_prefix] + '_wide.jpg';
                     }
                     if (window.chara_replace_images[_prefix]) {
                         _img_path = window.chara_replace_images[_prefix];
                     }
                     if (window.replace_images[_prefix]) {
-                        _img_path = window.replace_images[_prefix];
+                        _img_path = '/' + window.replace_images[_prefix];
                     }
                     new_manifest[i] = {
                         'type': 'image',
