--- a/idol_story/movie_play/448/3.html
+++ b/idol_story/movie_play/448/3.html
@@ -52,13 +52,13 @@
         var base_url = "";
         // 音声ファイルのmanifestを定義
         window.voice_manifest = {
-            'scene1': 'http://idolmaster.edgesuite.net/idolmaster/sound/9901052/21cb6912fa4e12f02f08a4f439c19f29.mp4',
-            'scene2': 'http://idolmaster.edgesuite.net/idolmaster/sound/9901052/f53d7bd3f109fec9c09450f6a1a4a792.mp4',
-            'scene3': 'http://idolmaster.edgesuite.net/idolmaster/sound/9901052/4fd26d9f076f6edf1496feaf8dd176c7.mp4',
-            'scene4': 'http://idolmaster.edgesuite.net/idolmaster/sound/9901052/aaf5e19c420816f4aea5243d88cab97e.mp4',
-            'scene5': 'http://idolmaster.edgesuite.net/idolmaster/sound/9901052/7e9733fbd996c493e6f7cf7c3cc421a3.mp4',
-            'scene6': 'http://idolmaster.edgesuite.net/idolmaster/sound/9901052/ac9d8ad8d4dc3d5035f71f619ffb4a7f.mp4',
-            'scene7': 'http://idolmaster.edgesuite.net/idolmaster/sound/9901052/d77bfd75bf198b5a0c25ee41657587c8.mp4',
+            'scene1': '../../../sound/9901052/scene1.mp3',
+            'scene2': '../../../sound/9901052/scene2.mp3',
+            'scene3': '../../../sound/9901052/scene3.mp3',
+            'scene4': '../../../sound/9901052/scene4.mp3',
+            'scene5': '../../../sound/9901052/scene5.mp3',
+            'scene6': '../../../sound/9901052/scene6.mp3',
+            'scene7': '../../../sound/9901052/scene7.mp3',
         };
         window.file_name = "_448_2"; // createjs の本体ファイルを定義
         window.dir_name = "../../../image_sp/cjs/episode/448_2/";
