--- a/idol_gallery/idol_detail/fumika_test.html
+++ b/idol_gallery/idol_detail/fumika_test.html
@@ -4349,10 +4349,10 @@ kg
         <div class="m-Top8 m-Btm8">
             <img src="../../image_sp/ui/line_hoshi.jpg" width="100%">
         </div>
-        <a id="search_cartoon" href='#' class="btn_normal_line_2 m-Cnt m-Btm12">劇場で検索</a>
-        <a href='../../item/show_premium_card_cjs/90/fumi_main.html' class="btn_normal_line_2 m-Cnt m-Btm12">プレミアムサイン</a>
+        <a id="search_cartoon" href='#' class="btn_normal_line_2 m-Cnt m-Btm12">극장에서 검색</a>
+        <a href='../../item/show_premium_card_cjs/90/fumi_main.html' class="btn_normal_line_2 m-Cnt m-Btm12">키라펜 연출</a>
         <a href='../../mypage.html'>
-            <div class="backLink">マイスタジオ</div>
+            <div class="backLink">마이 페이지로</div>
         </a>
         <footer>
             <div class="line_idolmaster"></div><a href="#top" id="toPageTop" class="mypage_under">
