--- a/idol_story/movie_play/448/1.html
+++ b/idol_story/movie_play/448/1.html
@@ -100,12 +100,12 @@
         // 読み込み開始
         load_js.loadManifest(window.js_load_files);
         var _effect_cnt = 1;
-        var image_server = "http://sp.pf-img-a.mbga.jp/12008305/";
-        var base_url = "http://125.6.169.35/idolmaster/";
+        var image_server = "";
+        var base_url = "";
         window.im_cjs = window.im_cjs || {};
         window.replace_images = [];
         window.file_name = "story_generator_n1"; // createjs の本体ファイルを定義
-        window.dir_name = "image_sp/cjs/genechara/";
+        window.dir_name = "../../../image_sp/cjs/genechara/";
         window.voice_manifest = {
             'scene1': '../../../sound/9901051/scene1.mp3',
             'scene2': '../../../sound/9901051/scene2.mp3',
