--- a/idol_story/movie_play/448/1.html
+++ b/idol_story/movie_play/448/1.html
@@ -137,7 +137,7 @@
                 "a_fade": "",
                 "": "",
                 "bgimg": "00001",
-                "message": "……ﾌﾟﾛﾃﾞｭｰｻｰさん｡来てくだ%nさったのですね｡……はい､本日%nは……どうしても､伝えたいこ%nとがあったものですから……｡",
+                "message": "……ﾌﾟﾛﾃﾞｭｰｻｰさん｡来てくだ\nさったのですね｡……はい､本日\nは……どうしても､伝えたいこ\nとがあったものですから……｡",
                 "timing": "",
                 "auto": "1",
                 "sound_effect": ""
