--- a/idol_story/movie_play/448/1_k.html
+++ b/idol_story/movie_play/448/1_k.html
@@ -191,7 +191,7 @@
                 "a_fade": "",
                 "": "",
                 "bgimg": "",
-                "message": "……자신의 말로, 자신의 마음을,\n좀더 전하고 싶다. 좀더 말로\n하고 싶다…… 말주변이 없던 제가\n…… 지금은, 그렇게 생각하고 있습니다.",
+                "message": "……자신의 말로, 자신의 마음을, 좀더 전하고 싶다. 좀더 말로 하고 싶다…… 말주변이 없던 제가…… 지금은, 그렇게 생각하고 있습니다.",
                 "timing": "",
                 "auto": "1",
                 "sound_effect": ""
