--- a/idol_story/movie_play/448/1_k.html
+++ b/idol_story/movie_play/448/1_k.html
@@ -137,7 +137,7 @@
                 "a_fade": "",
                 "": "",
                 "bgimg": "00001",
-                "message": "……프로듀서 씨. 와주셨군요.\n……네, 오늘은…… 무슨\n일이 있어도, 전하고 싶은 게\n있었으니까요…….",
+                "message": "……프로듀서 씨. 와주셨군요. ……네, 오늘은…… 무슨 일이 있어도, 전하고 싶은 게 있었으니까요…….",
                 "timing": "",
                 "auto": "1",
                 "sound_effect": ""
@@ -155,7 +155,7 @@
                 "a_fade": "",
                 "": "",
                 "bgimg": "",
-                "message": "……감사합니다…… 정말로,\n감사합니다……. 프로듀서\n씨와, 팬 분들께……\n많은 성원을 받았습니다.",
+                "message": "……감사합니다…… 정말로, 감사합니다……. 프로듀서 씨와, 팬 분들께…… 많은 성원을 받았습니다.",
                 "timing": "",
                 "auto": "1",
                 "sound_effect": ""
@@ -173,7 +173,7 @@
                 "a_fade": "",
                 "": "",
                 "bgimg": "",
-                "message": "……그렇기 때문에, 또 자아낼 수\n 있는 거겠죠. 당신과\n저로…… 새로운 이야기를. 아무리\n감사드려도…… 부족합니다.",
+                "message": "……그렇기 때문에, 또 자아낼 수 있는 거겠죠. 당신과 저로…… 새로운 이야기를. 아무리 감사드려도…… 부족합니다.",
                 "timing": "",
                 "auto": "1",
                 "sound_effect": ""
@@ -209,7 +209,7 @@
                 "a_fade": "",
                 "": "",
                 "bgimg": "",
-                "message": "……사람은, 성장합니다. 한권의 책\n같은, 계기만 있으면. ……\n저의 계기는, 프로듀서\n씨…… 당신이었습니다.",
+                "message": "……사람은, 성장합니다. 한권의 책 같은, 계기만 있으면. ……저의 계기는, 프로듀서 씨…… 당신이었습니다.",
                 "timing": "",
                 "auto": "1",
                 "sound_effect": ""
@@ -227,7 +227,7 @@
                 "a_fade": "",
                 "": "",
                 "bgimg": "",
-                "message": "……말로 하고 싶은 생각은, 아직\n잔뜩 있는데…… 전할 수 없어\n…… 저, 괜찮으시다면 후일, 다시\n시간을 내주실 수 없겠습니까……?",
+                "message": "……말로 하고 싶은 생각은, 아직 잔뜩 있는데…… 전할 수 없어…… 저, 괜찮으시다면 후일, 다시 시간을 내주실 수 없겠습니까……?",
                 "timing": "",
                 "auto": "1",
                 "sound_effect": ""
@@ -245,7 +245,7 @@
                 "a_fade": "",
                 "": "",
                 "bgimg": "",
-                "message": "……추억을, 돌아보고 싶어서\n…… 그러니까, 와 주셨으면 \n합니다. 저와 프로듀서\n씨의, 추억의 장소에…….",
+                "message": "……추억을, 돌아보고 싶어서…… 그러니까, 와 주셨으면 합니다. 저와 프로듀서 씨의, 추억의 장소에…….",
                 "timing": "",
                 "auto": "1",
                 "sound_effect": ""
