--- a/idol_gallery/idol_detail/fumika_k.html
+++ b/idol_gallery/idol_detail/fumika_k.html
@@ -3484,20 +3484,20 @@ kg
                         "comments_love_max": "기적같은 날들이 내려 쌓이고… 미래를, 저와 OO씨로 짓는다…. 과거도 미래도, 반짝임으로 충만할 것이, 틀림없습니다."
                     },
                     "voice": {
-                        "comment": "http://idolmaster.edgesuite.net/idolmaster/sound/2467001/18d153943eea61cb3f8dbaff0bc2dbeb.mp4",
-                        "comments_my_1": "http://idolmaster.edgesuite.net/idolmaster/sound/2467001/da43fa82121b9fe807abd5c89a324698.mp4",
-                        "comments_my_2": "http://idolmaster.edgesuite.net/idolmaster/sound/2467001/cea4932be8cac2f8debe4766c7a9b663.mp4",
-                        "comments_my_3": "http://idolmaster.edgesuite.net/idolmaster/sound/2467001/20e91e4519460088257a4df3b013f8c5.mp4",
-                        "comments_my_4": "http://idolmaster.edgesuite.net/idolmaster/sound/2467001/9e729bce885c1f512e834bef0c9e321a.mp4",
-                        "comments_my_max": "http://idolmaster.edgesuite.net/idolmaster/sound/2467001/4c1f20313cb7342680b6b03e2025965c.mp4",
-                        "comments_work_1": "http://idolmaster.edgesuite.net/idolmaster/sound/2467001/9dbe7c6f1c3c006d837d88fdc8e18a8d.mp4",
-                        "comments_work_2": "http://idolmaster.edgesuite.net/idolmaster/sound/2467001/7a0e6f91f570f23b8ac303701bc0e066.mp4",
-                        "comments_work_3": "http://idolmaster.edgesuite.net/idolmaster/sound/2467001/da3c4fd800beeeb92c87f4ef0842a2cb.mp4",
-                        "comments_work_4": "http://idolmaster.edgesuite.net/idolmaster/sound/2467001/098dac7395caccf7269825bdb27c8a15.mp4",
-                        "comments_work_max": "http://idolmaster.edgesuite.net/idolmaster/sound/2467001/0139746d5b1b4cf600f134e6698fad77.mp4",
-                        "comments_work_love_up": "http://idolmaster.edgesuite.net/idolmaster/sound/2467001/bd052b35c1d65a1f131dd341e3bb2553.mp4",
-                        "comments_live": "http://idolmaster.edgesuite.net/idolmaster/sound/2467001/c11fa0371705024bab342102632a2f40.mp4",
-                        "comments_love_max": "http://idolmaster.edgesuite.net/idolmaster/sound/2467001/ef18ff3bcf4813be30d009e2f2a9d993.mp4"
+                        "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2467001/idolcomment.mp3",
+                        "comments_my_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2467001/my_1.mp3",
+                        "comments_my_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2467001/my_2.mp3",
+                        "comments_my_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2467001/my_3.mp3",
+                        "comments_my_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2467001/my_4.mp3",
+                        "comments_my_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2467001/my_max.mp3",
+                        "comments_work_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2467001/work_1.mp3",
+                        "comments_work_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2467001/work_2.mp3",
+                        "comments_work_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2467001/work_3.mp3",
+                        "comments_work_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2467001/work_4.mp3",
+                        "comments_work_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2467001/work_max.mp3",
+                        "comments_work_love_up": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2467001/work_love_up.mp3",
+                        "comments_live": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2467001/live.mp3",
+                        "comments_love_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2467001/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
@@ -3564,20 +3564,20 @@ kg
                         "comments_love_max": "…OO씨, 멋진 이야기 감사합니다. …그리고, 앞으로도, 자아내가죠. 빛나는 이야기를, 둘이서."
                     },
                     "voice": {
-                        "comment": "http://idolmaster.edgesuite.net/idolmaster/sound/2567002/fd0de4a881ec5e8e1931f6ac4d2c499d.mp4",
-                        "comments_my_1": "http://idolmaster.edgesuite.net/idolmaster/sound/2567002/49b45644d4b59c5f400e772d1a6dc247.mp4",
-                        "comments_my_2": "http://idolmaster.edgesuite.net/idolmaster/sound/2567002/6eb4c2755da56c688d9242d4bb6a999f.mp4",
-                        "comments_my_3": "http://idolmaster.edgesuite.net/idolmaster/sound/2567002/5f4b863adfcd2f7a06d94e4554f4fd38.mp4",
-                        "comments_my_4": "http://idolmaster.edgesuite.net/idolmaster/sound/2567002/a70d1846466950ab5d6b4408ca1fad24.mp4",
-                        "comments_my_max": "http://idolmaster.edgesuite.net/idolmaster/sound/2567002/ee10a20cb336b85437daf61027888a30.mp4",
-                        "comments_work_1": "http://idolmaster.edgesuite.net/idolmaster/sound/2567002/1a509c649d4b265c0bfd0427f068816d.mp4",
-                        "comments_work_2": "http://idolmaster.edgesuite.net/idolmaster/sound/2567002/e46c0c9b7b05b688d189ccfae5ff3fa8.mp4",
-                        "comments_work_3": "http://idolmaster.edgesuite.net/idolmaster/sound/2567002/a36499480cf69e63ec1f964b586dafae.mp4",
-                        "comments_work_4": "http://idolmaster.edgesuite.net/idolmaster/sound/2567002/4b60f72195d372b2136b598e3f110390.mp4",
-                        "comments_work_max": "http://idolmaster.edgesuite.net/idolmaster/sound/2567002/badff8a71192f4de1983394d8a3d7e21.mp4",
-                        "comments_work_love_up": "http://idolmaster.edgesuite.net/idolmaster/sound/2567002/14d7eb1a3a35f2806a5d18528ccd7878.mp4",
-                        "comments_live": "http://idolmaster.edgesuite.net/idolmaster/sound/2567002/a0003adfd927939c034e1aedbfeb801e.mp4",
-                        "comments_love_max": "http://idolmaster.edgesuite.net/idolmaster/sound/2567002/9bc3b129019e0f99973531b53f785e90.mp4"
+                        "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2567002/idolcomment.mp3",
+                        "comments_my_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2567002/my_1.mp3",
+                        "comments_my_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2567002/my_2.mp3",
+                        "comments_my_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2567002/my_3.mp3",
+                        "comments_my_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2567002/my_4.mp3",
+                        "comments_my_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2567002/my_max.mp3",
+                        "comments_work_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2567002/work_1.mp3",
+                        "comments_work_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2567002/work_2.mp3",
+                        "comments_work_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2567002/work_3.mp3",
+                        "comments_work_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2567002/work_4.mp3",
+                        "comments_work_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2567002/work_max.mp3",
+                        "comments_work_love_up": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2567002/work_love_up.mp3",
+                        "comments_live": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2567002/live.mp3",
+                        "comments_love_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2567002/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
