--- a/mypage.html
+++ b/mypage.html
@@ -299,6 +299,11 @@
                 <div class="t-Cnt"><a href='event_produce/1733/memory.html' class="banner_type_text" style='background-image:url(image_sp/event/1733/banner_event_01.png)'></a></div>
             </div>
         </div>
+        <div class="t-Cnt m-Btm8">
+            <div class="area_banner_type_text jsOnBanner">
+                <div class="t-Cnt"><a href='memory/smart_phone_flash/convert/onetime_flash/10thdreamchance.html' class="banner_type_text" style='background-image:url(image_sp/banner/gacha/8b388df13a8abcfd400eb067d78cc0a2.png)'></a></div>
+            </div>
+        </div>
         <section>
             <div class="t-Lft" style="width:310px;margin:auto;">
                 <div class="gallery" style="display: inline-block;width: 96px;height:117px;margin: 1px 1px;">
