--- a/idol_story/movie_play/448/1_k.html
+++ b/idol_story/movie_play/448/1_k.html
@@ -245,7 +245,7 @@
                 "a_fade": "",
                 "": "",
                 "bgimg": "",
-                "message": "……추억을, 돌아보고 싶어서…… 그러니까, 와 주셨으면 합니다. 저와 프로듀서 씨의, 추억의 장소에…….",
+                "message": "……추억을, 돌아보고 싶어서…… 그러니까, 와 주셨으면 합니다. 저와 프로듀서 씨의, 시작의 장소에…….",
                 "timing": "",
                 "auto": "1",
                 "sound_effect": ""
